--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,7 @@
     <title>Tales of a dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"></head>
 <body>
+<div id="app"></div>
 <script src="/bundle.js"></script>
 </body>
 </html>
